[package]
name = "ARNewslinePlayer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
cpal = "0.16"
once_cell = "1.21"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8"
slint = "1.9"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

[build-dependencies]
slint-build = "1.9"

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-metadata]
opt-level = 3
